Resolve sonar issues (#60)